# AmurClient

./: .cz.yaml  .gitmodules  .pre-commit-config.yaml  ADB-0.42 GPIO info.txt  AmurClient.cpp  AmurClient.pro  CHANGELOG.md  CMakeLists.txt  CNAME  Doxyfile  LICENSE  Makefile  README.md  _config.yml  amur.cfg.in  configprocessor.cpp  configprocessor.h  index.md  logiccontroller.cpp  logiccontroller.h
.github/: build.yml
.github/workflows/: build.yml  cmake.yml  codeql-analysis.yml  doxygen.yml
.github/workflows/package/: deb.yaml
.github/workflows/scripts/: AmurClient-build.sh  cmake-install.sh  grpc-global-install.sh  grpc.sh  libconfig-install.sh  thirdparty-install.sh
_layouts/: default.html
buffers/protobuf/: control.pb.cc  control.pb.h  control.proto  sensors.proto
config/: CMakeLists.txt  configprocessor.cpp  configprocessor.h
docs/html/: AmurClient_8cpp.html  AmurClient_8cpp.js  AmurClient_8cpp__incl.map  AmurClient_8cpp__incl.md5  AmurClient_8cpp_a05beec69e1cdcc75a0b64f2422bb14f3_icgraph.map  AmurClient_8cpp_a05beec69e1cdcc75a0b64f2422bb14f3_icgraph.md5  AmurClient_8cpp_a0ddf1224851353fc92bfbff6f499fa97_cgraph.map  AmurClient_8cpp_a0ddf1224851353fc92bfbff6f499fa97_cgraph.md5  AmurClient_8cpp_a8ed92c8a33fca226fd3017b273fea9f7_icgraph.map  AmurClient_8cpp_a8ed92c8a33fca226fd3017b273fea9f7_icgraph.md5  CHANGELOG_8md.html  CMakeLists_8txt.html  README_8md.html  TimerCallback_8h.html  TimerCallback_8h__dep__incl.map  TimerCallback_8h__dep__incl.md5  TimerCallback_8h__incl.map  TimerCallback_8h__incl.md5  TimerCallback_8h_source.html  Timer_8cpp.html  Timer_8cpp__incl.map  Timer_8cpp__incl.md5  Timer_8h.html  Timer_8h__dep__incl.map  Timer_8h__dep__incl.md5  Timer_8h__incl.map  Timer_8h__incl.md5  Timer_8h_source.html  annotated.html  annotated_dup.js  classConfigProcessor-members.html  classConfigProcessor.html  classConfigProcessor.js  classConfigProcessor__coll__graph.map  classConfigProcessor__coll__graph.md5  classConfigProcessor_a09fe56d6b694cf537a8479f44e615a9b_cgraph.map  classConfigProcessor_a09fe56d6b694cf537a8479f44e615a9b_cgraph.md5  classConfigProcessor_a1480157abb26931735fda235094bd22d_cgraph.map  classConfigProcessor_a1480157abb26931735fda235094bd22d_cgraph.md5  classConfigProcessor_a40f27c5e6057537ca6689d5a4b05c264_icgraph.map  (+765 more)
docs/html/search/: all_0.js  all_1.js  all_10.js  all_11.js  all_12.js  all_13.js  all_14.js  all_15.js  all_2.js  all_3.js  all_4.js  all_5.js  all_6.js  all_7.js  all_8.js  all_9.js  all_a.js  all_b.js  all_c.js  all_d.js  all_e.js  all_f.js  classes_0.js  classes_1.js  classes_2.js  classes_3.js  classes_4.js  classes_5.js  classes_6.js  classes_7.js  classes_8.js  classes_9.js  classes_a.js  classes_b.js  classes_c.js  classes_d.js  classes_e.js  defines_0.js  defines_1.js  defines_2.js  (+60 more)
docs/man/man/: AmurClient.cpp.3  CHANGELOG.md.3  CMakeLists.txt.3  ConfigProcessor.3  Encoder.3  EncoderSettings.3  HC165.3  HC595.3  I2C.3  LogicController.3  Motor.3  MotorController.3  MotorSettings.3  NetworkController.3  PWMController.3  PWMPins.3  PeripheralController.3  PeripheralSettings.3  Pilot.3  README.md.3  RegisterController.3  RegisterSettings.3  RegisterSettings_General.3  RegisterSettings_HC165Pins.3  RegisterSettings_HC595Pins.3  SPI.3  Timer.3  Timer.cpp.3  Timer.h.3  TimerCallback.3  TimerCallback.h.3  TimerCallback_Runnable.3  UART.3  Vector2.3  _github_workspace_config_.3  _github_workspace_logic_.3  _github_workspace_logic_mapping_.3  _github_workspace_modules_.3  _github_workspace_modules_interfaces_.3  _github_workspace_modules_interfaces_i2c_.3  (+61 more)
logic/: CMakeLists.txt  pilot.cpp  pilot.h
logic/mapping/: vector2.h
modules/: CMakeLists.txt  encoder.cpp  encoder.h  motorcontroller.cpp  motorcontroller.h  peripheralcontroller.cpp  peripheralcontroller.h  peripheralsettings.h
modules/encoder/: encoder.cpp  encoder.h
modules/interfaces/: CMakeLists.txt
modules/interfaces/i2c/: I2C.cpp  i2c.cpp  i2c.h
modules/interfaces/spi/: spi.cpp  spi.h
modules/interfaces/uart/: UART.cpp  uart.cpp  uart.h
modules/motor/: motorcontroller.cpp  motorcontroller.h
modules/motor/VNH2SP30/: vnh2sp30.cpp  vnh2sp30.h
modules/pwm/: CMakeLists.txt  pwmcontroller.cpp  pwmcontroller.h  pwmsettings.h
modules/registers/: CMakeLists.txt  main.cpp  registercontroller.cpp  registercontroller.h  registerssettings.h
modules/registers/hc165/: hc165.cpp  hc165.h  train_hc165.cpp
modules/registers/hc595/: hc595.cpp  hc595.h  train_hc595.cpp
network/: CMakeLists.txt  arper.cpp  arper.h  bufferController.cpp  bufferController.h  client.cpp  client.h  main.cpp  networkcontroller.cpp  networkcontroller.h  server.cpp  server.h
network/protobuf/: CMakeLists.txt  amur.grpc.pb.cc  amur.grpc.pb.h  amur.pb.cc  amur.pb.h  amur.proto  rebuild.sh
network/tcp/: tcp.cpp  tcp.h  tcpclient.cpp  tcpclient.h  tcpserver.cpp  tcpserver.h
protobuf/: control.pb.cc  control.pb.h  control.proto  controls.pb.cc  controls.pb.h  controls.proto  sensors.pb.cc  sensors.pb.h  sensors.proto
system/: shell.cpp  system.cpp  system.h  systeminfo.h
tests/: CMakeLists.txt
tests/unit_tests/: CMakeLists.txt  config_unit_tests.cpp
tests/unit_tests/modules/: encoder_test.cpp
tests/unit_tests/modules/registers/: hc165_test.cpp  hc595_mock.h  hc595_test.cpp  registercontroller_test.cpp
timer/: CMakeLists.txt  CppTimer.cpp  CppTimer.h  CppTimerCallback.h  Timer.cpp  Timer.h  TimerCallback.h
